<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_show_all_users_of_group">ShowAllUsersOfGroup</string>
    <string name="title_activity_no_group">NoGroupActivity</string>
    <string name="title_activity_create_group_dialog">CreateGroupDialog</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_all_groups">AllGroupsActivity</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="title_activity_search_group_dialog">SearchGroupDialog</string>
    <string name="title_activity_info_fragment">InfoFragment</string>
    <string name="title_activity_faqfragment">FAQFragment</string>
    <string name="app_name">counterfight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="string_nogroupact_advice">Um die App nutzen zu können, musst du Mitglied in mindestens einer Gruppe sein. Was möchtest du tun?</string>
    <string name="string_nogroupact_createGroup">Gruppe gründen</string>
    <string name="string_nogroupact_searchGroup">Gruppe beitreten</string>
    <string name="string_creategroupdialog_advice">Bitte gib deinen gewünschten Gruppennamen ein: </string>
    <string name="string_creategroupdialog_groupnamehint">Gruppenname</string>
    <string name="string_creategroupdialog_ok">OK</string>
    <string name="string_searchgroupdialog_advice">Wenn du von einem anderen Counterfight-Nutzer eine Gruppen-Id bekommen hast, kannst du dich damit hier in der Gruppe anmelden.</string>
    <string name="string_searchgroupdialog_ok">Beitreten</string>
    <string name="string_searchgroupdialog_groupidhint">Gruppen-Id</string>
    <string name="string_searchgroupdialog_wronggroupid">Bitte gib 5 Ziffern ein</string>
    <string name="string_loginact_advice">Bitte logge dich ein oder registriere dir ein neues Konto</string>
    <string name="string_loginact_login">Login</string>
    <string name="string_loginact_welcome">Counterfight</string>
    <string name="string_loginact_usernamehint">Benutzername</string>
    <string name="string_loginact_passwordhint">Passwort</string>
    <string name="string_loginact_register">Registrieren</string>
    <string name="string_registeract_advice">Bitte ausfüllen:</string>
    <string name="string_registeract_realnamehint">Anzeigename</string>
    <string name="string_registeract_repeatpasswordhint">Passwort wiederholen</string>
    <string name="string_registeract_register">Registrieren</string>
    <string name="string_registeract_fillallfields">Bitte alle Felder ausfüllen</string>
    <string name="string_registeract_userdeleted">Account erfolgreich gelöscht</string>
    <string name="string_registeract_userdeletefailed">Account konnte nicht gelöscht werden!</string>
    <string name="string_registeract_wrongpassword">Das Passwort ist nicht gleich!</string>
    <string name="string_allgroupsact_title">Gruppenübersicht</string>
    <string name="string_allgroupsact_subtitle">blabla</string>
    <string name="string_allgroupsact_view">Gruppenübersicht</string>
    <string name="string_allgroupsact_first_place">1.Platz:</string>
    <string name="string_allgroupsact_no_more_group">Keine Gruppe mehr vorhanden</string>
    <string name="string_groupdetailact_alerttitle">+1</string>
    <string name="string_groupdetailact_alerttext">Dein Counterstand wurde erhöht!</string>
    <string name="string_groupdetailact_alertokay">Gut!</string>
    <string name="string_groupdetailact_fail_alerttitle">Warnung</string>
    <string name="string_groupdetailact_fail_alerttext">Du hast momentan leider keine Interverbindung..</string>
    <string name="string_groupdetailact_fail_alertokay">OK</string>
    <string name="string_allact_loading">Lädt...</string>
    <string name="string_context_leavegroup">Gruppe verlassen</string>
    <string name="string_context_deletegroup">Gruppe löschen</string>
    <string name="string_leavegroupasynctask_success">Gruppe erfolgreich verlassen</string>
    <string name="string_leavegroupasynctask_fail">Gruppe konnte nicht verlassen werden</string>
    <string name="string_deletegroupasynctask_success">Gruppe erfolgreich gelöscht</string>
    <string name="string_deletegroupasynctask_fail">Gruppe konnte nicht gelöscht werden</string>


</resources>