<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.woodpot.counterfight.LoginActivity" >

    <TextView
        android:id="@+id/textview_loginact_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_loginact_welcome"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textview_loginact_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_loginact_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/string_loginact_advice" />
    
    <EditText
        android:id="@+id/edittext_loginact_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="text"
        android:hint="@string/string_loginact_usernamehint"
        android:ems="10" />
    
    <EditText
        android:id="@+id/edittext_loginact_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_loginact_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:hint="@string/string_loginact_passwordhint"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_loginact_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_loginact_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/string_loginact_login" />

    <TextView
        android:id="@+id/textview_loginact_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_loginact_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:linksClickable="true"
        android:text="@string/string_loginact_register" />

</RelativeLayout>