<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.woodpot.counterfight.RegisterActivity" >

    <TextView
        android:id="@+id/textview_registeract_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/string_registeract_advice" />

    <EditText
        android:id="@+id/edittext_registeract_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_registeract_advice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:hint="@string/string_loginact_usernamehint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext_registeract_realname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_registeract_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:hint="@string/string_registeract_realnamehint"
        android:ems="10" />

    <EditText
        android:id="@+id/edittext_registeract_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/string_loginact_passwordhint"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_registeract_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_registeract_password1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:hint="@string/string_registeract_repeatpasswordhint"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_registeract_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_registeract_password2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/string_registeract_register" />

</RelativeLayout>