<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.woodpot.counterfight.NoGroupActivity" >

    <Button
        android:id="@+id/button_nogroupact_createGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/string_nogroupact_createGroup" />
    
    <Button
        android:id="@+id/button_nogroupact_searchGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_nogroupact_advice"
        android:layout_marginTop="83dp"
        android:text="@string/string_nogroupact_searchGroup" />

    <TextView
        android:id="@+id/textview_nogroupact_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/string_nogroupact_advice" />

</RelativeLayout>
