<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.woodpot.counterfight.CreateGroupDialog" >

    <TextView
        android:id="@+id/textview_searchgroupdialog_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_searchgroupdialog_advice" />

    <Button
        android:id="@+id/button_searchgroupdialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edittext_searchgroupdialog_groupid"
        android:layout_below="@+id/edittext_searchgroupdialog_groupid"
        android:text="@string/string_searchgroupdialog_ok" />

    <EditText
        android:id="@+id/edittext_searchgroupdialog_groupid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/string_searchgroupdialog_groupidhint"
        android:inputType="numberDecimal" />



</RelativeLayout>